static/style.css
p {
    text-align: center;
}

body {
    background-color: #f6f6f6;
    font-family: sans-serif;
    -webkit-font-smoothing: antialiased;
    font-size: 14px;
    line-height: 1.4;
    margin: 0;
    padding: 0;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%; 
}

.footer {
    clear: both;
    margin-top: 10px;
    text-align: right;
    width: 100%;
}

.header {
    margin: 0 auto;
}

